--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12",
     "redux": "^4.0.5",
-    "redux-react-hook": "^4.0.3"
+    "redux-react-hook": "^4.0.3",
+    "expo-ads-admob": "~10.1.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
